fixed nav collapse issue

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,22 @@
 
-
+@media(max-width:768px)
+{
+    .ul-bg
+    {
+        background-color: coral;
+    }
+    .navbar-nav
+    {
+        float: right;
+        margin: 0;
+        padding: 0;
+    }
+    .navbar-toggler
+    {
+        margin: 0;
+        float: right;
+    }
+}
 
 /* ====================Start Header styles=============================== */
 
@@ -54,6 +71,15 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
+}
+
+.header_area
+{
+    margin: 0px;
+}
+.main-menu 
+{
+    margin:0px;
 }
 
 /* ======================End Header styles================================ */
